apps/private/ingress-routes/authentik-forward-auth.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authentik-forward-auth
  namespace: private
spec:
  forwardAuth:
    address: http://authentik-proxy-outpost.private.svc.cluster.local:9000/akprox/auth?traefik
    authResponseHeaders:
      - X-Auth-Username
      - X-Auth-Groups
      - X-Auth-Email
      - X-Auth-Name
      - X-Auth-Subject
      - X-Auth-Preferred-Username
    trustForwardHeader: true
